# remindeer-actix-trial

./: LICENSE  README.md
.github/workflows/: rust.yml
remindeer/: Cargo.toml
remindeer/migrations/2023-06-23-130312_create_user/: up.sql
remindeer/migrations/2023-06-30-115003_add_phone_number_col/: down.sql  up.sql
remindeer/migrations/2023-07-13-233157_add_profile_and_uid/: down.sql  up.sql
remindeer/migrations/2023-07-15-065816_create-user-table/: up.sql
remindeer/src/: main.rs  schema.rs
remindeer/src/helpers/: mod.rs  types.rs
remindeer/src/server/: config.rs  mod.rs
remindeer/src/server/handlers/: auth_handler.rs  index_handler.rs  mod.rs  users_handler.rs
remindeer/src/server/handlers/api/: mod.rs  users_handler.rs
remindeer/src/server/handlers/mobile/: auth_handler.rs  index_handler.rs  mod.rs
remindeer/src/server/middleware/: error_handling.rs  jwt_auth.rs  mod.rs
remindeer/src/server/models/: mod.rs  user_model.rs
remindeer/src/server/repository/: mod.rs  repository.rs  repository_errors.rs  user_repository.rs
